--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink: ':title/'
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings add your name
-author: Leach Chen
+author: Tianjie Zhang
 
 author-pic: leach-face.jpg
 about-author: I am an Android developer.I will add description latter.
@@ -23,7 +23,7 @@ instagram: # Add your Instagram handle
 pinterest: # Add your Pinterest handle
 
 #修改成你自己的
-email:
+email: tjzhang@u.boisestate.edu
 phone:
 github:
 jianshu:
