--- a/_config.yml
+++ b/_config.yml
@@ -86,11 +86,11 @@ links1:
     type:         recent
     external:     false
   - name:         2023
-    url:          /blogdemo/myblog/essays
+    url:          /myblog/essays
     type:         essays
     external:     false
   - name:         2022
-    url:          /blogdemo/myblog/jekyll
+    url:          /myblog/jekyll
     type:         jekyll
     external:     false
 
