--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Blog - Leach Chen
+title: Blog - Tianjie Zhang
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -31,10 +31,10 @@ juejin:
 csdn:
 
 # Newsletter
-mailchimp: # Add your MailChimp form identifier.
+# mailchimp: # Add your MailChimp form identifier.
 
 # Disqus修改成你自己的
-discus_identifier: leach-chen
+# discus_identifier: leach-chen
 # Add your discus identifier
 
 #intensedebate修改成你自己的
@@ -45,7 +45,7 @@ google-analysis:
 baidu-analysis:
 
 #youyan
-youyan-id: 2157296
+# youyan-id: 2157296
 
 # Paginate
 paginate: 18
@@ -65,11 +65,11 @@ imagepath: /blogdemo
 
 links:
   - name:         Home
-    url:          https://www.leachchen.com
+    url:          https://tjboise.github.io/resume/
     external:     false
-  - name:         About
-    url:          /blogdemo/about
-    external:     false
+  # - name:         About
+  #   url:          /blogdemo/about
+  #   external:     false
 
 #添加分类步骤：
 #1：在_config.yml links1及blog_中添加对应内容
@@ -86,7 +86,7 @@ links1:
     type:         recent
     external:     false
   - name:         2023
-    url:          /myblog/essays
+    url:          /myblog/essays/index.html
     type:         essays
     external:     false
   - name:         2022
