--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ about-author: I am an Android developer.I will add description latter.
 
 #修改成你自己的
 # Contact links
-website: # Add your website, do not add http://
+website: tjboise.github.io/resume/ # Add your website, do not add http://
 linkedin: # Add your Linkedin handle
 twitter: # Add your Twitter handle
 facebook: # Add your Facebook handle
@@ -24,7 +24,7 @@ pinterest: # Add your Pinterest handle
 
 #修改成你自己的
 email: tjzhang@u.boisestate.edu
-phone:
+phone: 986-888-2443
 github:
 jianshu:
 juejin:
