--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ links1:
 blog_1:    recent
 blog_2:    essays
 blog_3:    jekyll
-blog_4:    jekyll
+blog_4:    jk
 
 
 #permalink: /:year/:month/:day/:title.html
